--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  line-height: 1;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 60px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.table-no-highlight td {
+  background-color: transparent !important;
+}
+.MuiTableCell-root{border-bottom: none}
+
+.makeStyles-root-5 > * {
+  border-bottom: none !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+tr.cover {
+  margin: 8px;
+  width: 100%  !important;
+  border-bottom: none !important;
+  border-spacing: 50; 
+  border-collapse: collapse;
+  background-color: #f1f5f8 !important;
+}
+
+
+.cver {
+  margin-left: -18px !important;
+  width: 90vw !important;
+  border-bottom: none !important;
+  background-color: #f1f5f8 !important;
+}
+
+input{
+  height: 30px;
+  width: 80px;
+  padding-left: 11px;
+  border-color: #f1f5f8;
+
 }
