--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 .table-no-highlight td {
   background-color: transparent !important;
 }
-.MuiTableCell-root{border-bottom: none}
+
 
 .makeStyles-root-5 > * {
   border-bottom: none !important;
@@ -26,10 +26,23 @@ tr.cover {
   background-color: #f1f5f8 !important;
 }
 
+.makeStyles-highlight-6 {
+  color: #191a1b !important;
+  background-color: transparent !important;
+}
 
+.MuiCheckbox-colorSecondary.Mui-checked {
+  color: #191a1b !important;
+}
+
+.MuiTableRow-root.Mui-selected, .MuiTableRow-root.Mui-selected:hover {
+  background-color: #ffffff !important;
+  color: #27a6e0;
+  border-left:blue !important;
+}
 .cver {
-  margin-left: -18px !important;
-  width: 90vw !important;
+  
+  width: 60vw !important;
   border-bottom: none !important;
   background-color: #f1f5f8 !important;
 }
@@ -40,4 +53,24 @@ input{
   padding-left: 11px;
   border-color: #f1f5f8;
 
+}
+
+.MuiTableCell-body {
+  font-family: "Roboto" !important;
+  font-weight: 500 !important;
+  line-height: 30px !important;
+  letter-spacing: 0.01071em !important;
+}
+
+.MuiTableCell-root {
+  display: table-cell;
+  padding: 16px;
+  font-size: 0.875rem;
+  text-align: left;
+  font-family: "Roboto";
+  font-weight: 400;
+  line-height: 1.43;
+  border-bottom: 1px solid rgb(32, 29, 29);
+  letter-spacing: 0.01071em;
+  vertical-align: inherit;
 }
