--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 
+
+
 body {
   line-height: 1;
   display: flex;
@@ -7,28 +9,25 @@ body {
   margin-right: 100px;
 }
 
+table {
+  border-collapse:collapse;
+  text-indent:inherit;
+  border-spacing: 0px;
+}
+
 .table-no-highlight td {
-  background-color: transparent !important;
+  background-color: transparent;
 }
 
 
 .makeStyles-root-5 > * {
-  border-bottom: none !important;
+  border-bottom: none;
 }
 
-
-tr.cover {
-  margin: 8px;
-  width: 100%  !important;
-  border-bottom: none !important;
-  border-spacing: 50; 
-  border-collapse: collapse;
-  background-color: #f1f5f8 !important;
-}
 
 .makeStyles-highlight-6 {
   color: #191a1b !important;
-  background-color: transparent !important;
+  background-color: transparent;
 }
 
 .MuiCheckbox-colorSecondary.Mui-checked {
@@ -36,33 +35,34 @@ tr.cover {
 }
 
 .MuiTableRow-root.Mui-selected, .MuiTableRow-root.Mui-selected:hover {
-  background-color: #ffffff !important;
-  color: #27a6e0;
+  /* background-color: #ffffff; */
+  color: #27a6e0 !important;
   border-left:blue !important;
 }
-.cver {
-  
-  width: 60vw !important;
-  border-bottom: none !important;
-  background-color: #f1f5f8 !important;
+
+
+table.MuiTable-root {
+  border-bottom: none;
+  background-color: #f1f5f8;
 }
 
 input{
   height: 30px;
   width: 80px;
   padding-left: 11px;
-  border-color: #f1f5f8;
+  border-color: #f1f5f8 !important;
 
 }
 
 .MuiTableCell-body {
-  font-family: "Roboto" !important;
-  font-weight: 500 !important;
-  line-height: 30px !important;
-  letter-spacing: 0.01071em !important;
+  font-family: "Roboto";
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0.01071em;
 }
 
 .MuiTableCell-root {
+  background-color: #ffffff;
   display: table-cell;
   padding: 16px;
   font-size: 0.875rem;
@@ -70,7 +70,13 @@ input{
   font-family: "Roboto";
   font-weight: 400;
   line-height: 1.43;
-  border-bottom: 1px solid rgb(32, 29, 29);
+  border-bottom: none;
   letter-spacing: 0.01071em;
   vertical-align: inherit;
+}
+
+.cver {
+  width: 60vw;
+  border-bottom: none;
+  background-color: #f1f5f8 !important;
 }
