--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ table {
 
 .makeStyles-highlight-6 {
   color: #191a1b !important;
-  background-color: transparent;
+  background-color: #f1f5f8 !important;
 }
 
 .MuiCheckbox-colorSecondary.Mui-checked {
