--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
   margin-top: 60px;
   margin-left: 100px;
   margin-right: 100px;
+  font-family: 'Poppins', sans-serif;
 }
 
 table {
@@ -35,9 +36,7 @@ table {
 }
 
 .MuiTableRow-root.Mui-selected, .MuiTableRow-root.Mui-selected:hover {
-  /* background-color: #ffffff; */
   color: #27a6e0 !important;
-  border-left:blue !important;
 }
 
 
@@ -67,8 +66,8 @@ input{
   padding: 16px;
   font-size: 0.875rem;
   text-align: left;
-  font-family: "Roboto";
-  font-weight: 400;
+  font-family: 'Poppins', sans-serif !important;
+  font-weight: bold;
   line-height: 1.43;
   border-bottom: none;
   letter-spacing: 0.01071em;
@@ -79,4 +78,9 @@ input{
   width: 60vw;
   border-bottom: none;
   background-color: #f1f5f8 !important;
+  
+}
+
+.addborder{
+  border-left: 5px solid #27a6e0;
 }
