--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,11 @@ table {
   color: #0588c5;
   
 }
+
+tr:hover {
+  color: #0588c5;
+  
+}
 table.MuiTable-root {
   border-bottom: none;
   background-color: #f1f5f8;
@@ -60,10 +65,11 @@ input{
 }
 
 .MuiTableCell-body {
-  font-family: "Roboto";
-  font-weight: 500;
+  font-family: 'Poppins', sans-serif !important;
+  font-weight: bold;
   line-height: 30px;
   letter-spacing: 0.01071em;
+  transition: color 2s ease-in-out;
 }
 
 .MuiTableCell-root {
@@ -89,4 +95,8 @@ input{
 
 .addborder{
   border-left: 5px solid #0588c5;
+}
+
+.addborderF{
+  border-left: 5px solid #27a6e0;
 }
